--- a/app/views/paths/edit.html.erb
+++ b/app/views/paths/edit.html.erb
@@ -10,7 +10,7 @@
 	<div class="field clearfix">
 		<%= f.label :description %>
 		<div class="input">
-			<%= f.text_area :description %>
+			<%= f.text_area :description, :class => "xxlarge", :rows => "4" %>
 		</div>
 	</div>
 	<div class="field clearfix">
