Fixed. .PNG != .png

--- a/app/views/tours/user_tour.html.erb
+++ b/app/views/tours/user_tour.html.erb
@@ -17,7 +17,7 @@
 			<p>All of the Paths you are currently enrolled in are displayed at the top. Moonlite news from around your company is just below, and will feature stories about every user's achievements and path progress.</p>
 		</div>
 		<div class="span10 columns">
-			<%= image_tag "/images/tour/home.png", :size=>"600x400"%>
+			<%= image_tag "/images/tour/home.PNG", :size=>"600x400"%>
 		</div>
 	</div>
 	<% elsif @page == 2 %>
@@ -30,7 +30,7 @@
 			<p>You can access each of the Paths that your organization has made or purchased from the <strong>Path Marketplace</strong> (top right).</p>
 		</div>
 		<div class="span10 columns">
-			<%= image_tag "/images/tour/all_paths.png", :size=>"600x400"%>
+			<%= image_tag "/images/tour/all_paths.PNG", :size=>"600x400"%>
 		</div>
 	</div>
 	<div class="page-header">
@@ -43,7 +43,7 @@
 			<p>Once here, you can enroll in the Path by clicking the <strong>Enroll</strong> button at the bottom.</p>
 		</div>
 		<div class="span10 columns">
-			<%= image_tag "/images/tour/enroll_path.png", :size=>"600x400"%>
+			<%= image_tag "/images/tour/enroll_path.PNG", :size=>"600x400"%>
 		</div>
 	</div>
 	<div class="page-header">
@@ -54,7 +54,7 @@
 			<p>Once you've enrolled in a path, you can click the <strong>Continue</strong> button at the bottom to start a short quiz session.</p>
 		</div>
 		<div class="span10 columns">
-			<%= image_tag "/images/tour/continue_path.png", :size=>"600x500"%>
+			<%= image_tag "/images/tour/continue_path.PNG", :size=>"600x500"%>
 		</div>
 	</div>
 	<div class="page-header">
@@ -67,8 +67,8 @@
 			<p>Later on in the tour we'll talk about how you can spend your hard earned points at the <strong>Company Store</strong>.</p>
 		</div>
 		<div class="span10 columns">
-			<%= image_tag "/images/tour/continue_answer_path.png", :size=>"600x300"%>
-			<%= image_tag "/images/tour/continue_answer_correct_path.png", :size=>"600x300"%>
+			<%= image_tag "/images/tour/continue_answer_path.PNG", :size=>"600x300"%>
+			<%= image_tag "/images/tour/continue_answer_correct_path.PNG", :size=>"600x300"%>
 		</div>
 	</div>
 	<% elsif @page == 3 %>
