--- a/app/views/tours/admin_tour.html.erb
+++ b/app/views/tours/admin_tour.html.erb
@@ -17,7 +17,7 @@
 			<p>All of the Paths you are currently enrolled in are displayed at the top. Moonlite news from around your company is just below, and will feature stories about every user's achievements and path progress.</p>
 		</div>
 		<div class="span10 columns">
-			<%= image_tag "/images/home.png", :size=>"600x400"%>
+			<%= image_tag "/images/tour/home.PNG", :size=>"600x400"%>
 		</div>
 	</div>
 	<% elsif @page == 2 %>
@@ -30,7 +30,7 @@
 			<p>You can access each of the Paths that your organization has made or purchased from the <strong>Path Marketplace</strong> (top right).</p>
 		</div>
 		<div class="span10 columns">
-			<%= image_tag "/images/all_paths.png", :size=>"600x400"%>
+			<%= image_tag "/images/tour/all_paths.PNG", :size=>"600x400"%>
 		</div>
 	</div>
 	<div class="page-header">
@@ -43,7 +43,7 @@
 			<p>Once here, you can enroll in the Path by clicking the <strong>Enroll</strong> button at the bottom.</p>
 		</div>
 		<div class="span10 columns">
-			<%= image_tag "/images/enroll_path.png", :size=>"600x400"%>
+			<%= image_tag "/images/tour/enroll_path.PNG", :size=>"600x400"%>
 		</div>
 	</div>
 	<div class="page-header">
@@ -54,7 +54,7 @@
 			<p>Once you've enrolled in a path, you can click the <strong>Continue</strong> button at the bottom to start a short quiz session.</p>
 		</div>
 		<div class="span10 columns">
-			<%= image_tag "/images/continue_path.png", :size=>"600x500"%>
+			<%= image_tag "/images/tour/continue_path.PNG", :size=>"600x500"%>
 		</div>
 	</div>
 	<div class="page-header">
@@ -67,8 +67,8 @@
 			<p>Later on in the tour we'll talk about how you can spend your hard earned points at the <strong>Company Store</strong>.</p>
 		</div>
 		<div class="span10 columns">
-			<%= image_tag "/images/continue_answer_path.png", :size=>"600x300"%>
-			<%= image_tag "/images/continue_answer_correct_path.png", :size=>"600x300"%>
+			<%= image_tag "/images/tour/continue_answer_path.PNG", :size=>"600x300"%>
+			<%= image_tag "/images/tour/continue_answer_correct_path.PNG", :size=>"600x300"%>
 		</div>
 	</div>
 	<% elsif @page == 3 %>
@@ -80,7 +80,7 @@
 			<p>From the Paths page, click the <strong>Create new Path</strong> link at the bottom left.</p>
 		</div>
 		<div class="span10 columns">
-			<%= image_tag "/images/all_paths.png", :size=>"600x400"%>
+			<%= image_tag "/images/tour/all_paths.PNG", :size=>"600x400"%>
 		</div>
 	</div>
 	<div class="page-header">
@@ -92,8 +92,8 @@
 			<p></p>
 		</div>
 		<div class="span10 columns">
-			<%= image_tag "/images/create_path_new.png", :size=>"600x200"%>
-			<%= image_tag "/images/create_path_show.png", :size=>"600x200"%>
+			<%= image_tag "/images/tour/create_path_new.PNG", :size=>"600x200"%>
+			<%= image_tag "/images/tour/create_path_show.PNG", :size=>"600x200"%>
 		</div>
 	</div>
 	<div class="page-header">
@@ -105,7 +105,7 @@
 			<p>Once you have a good picture, you can add questions to your Path either one at a time by clicking <strong>Add Question</strong> or by uploading a group of them from a .CSV file by clicking <strong>Upload Questions</strong>.</p>
 		</div>
 		<div class="span10 columns">
-			<%= image_tag "/images/create_path_edit.png", :size=>"600x300"%>
+			<%= image_tag "/images/tour/create_path_edit.PNG", :size=>"600x300"%>
 		</div>
 	</div>
 	<div class="page-header">
@@ -126,9 +126,9 @@
 			<p>Click <strong>Submit</strong> and your file will be processed and a question created for each row in the file. Simple as pie.</p>
 		</div>
 		<div class="span10 columns">
-			<%= image_tag "/images/create_path_file.png", :size=>"600x200", :style => "margin-bottom: 40px;"%>
-			<%= image_tag "/images/create_path_upload.png", :size=>"600x200", :style => "margin-bottom: 40px;"%>
-			<%= image_tag "/images/create_path_upload_finish.png", :size=>"600x200"%>
+			<%= image_tag "/images/tour/create_path_file.PNG", :size=>"600x200", :style => "margin-bottom: 40px;"%>
+			<%= image_tag "/images/tour/create_path_upload.PNG", :size=>"600x200", :style => "margin-bottom: 40px;"%>
+			<%= image_tag "/images/tour/create_path_upload_finish.PNG", :size=>"600x200"%>
 		</div>
 	</div>
 	<% elsif @page == 4 %>
@@ -141,7 +141,7 @@
 			<p>To access the market, go back to the Paths page and click <strong>Path Marketplace</strong> at the top right corner of the page.</p>
 		</div>
 		<div class="span10 columns">
-			<%= image_tag "/images/all_paths.png", :size=>"600x400"%>
+			<%= image_tag "/images/tour/all_paths.PNG", :size=>"600x400"%>
 		</div>
 	</div>
 	<div class="page-header">
@@ -153,8 +153,8 @@
 			<p>Searching by the keyword "Salesforce", we can see that there is one result. Clicking on it will show us details about the Path and give us an option to purchase it.</p>
 		</div>
 		<div class="span10 columns">
-			<%= image_tag "/images/path_market_all.png", :size=>"600x400", :style => "margin-bottom: 40px;"%>
-			<%= image_tag "/images/path_market_search.png", :size=>"500x200"%>
+			<%= image_tag "/images/tour/path_market_all.PNG", :size=>"600x400", :style => "margin-bottom: 40px;"%>
+			<%= image_tag "/images/tour/path_market_search.PNG", :size=>"500x200"%>
 		</div>
 	</div>
 	<div class="page-header">
@@ -166,8 +166,8 @@
 			<p>Searching by the keyword "Salesforce", we can see that there is one result. Clicking on it will show us details about the Path and give us an option to purchase it.</p>
 		</div>
 		<div class="span10 columns">
-			<%= image_tag "/images/path_market_confirm.png", :size=>"500x200", :style => "margin-bottom: 40px;"%>
-			<%= image_tag "/images/path_market_purchased.png", :size=>"600x300"%>
+			<%= image_tag "/images/tour/path_market_confirm.PNG", :size=>"500x200", :style => "margin-bottom: 40px;"%>
+			<%= image_tag "/images/tour/path_market_purchased.PNG", :size=>"600x300"%>
 		</div>
 	</div>
 	<% elsif @page == 5 %>
