Added the rest of the tour framework.

--- a/app/views/tours/user_tour.html.erb
+++ b/app/views/tours/user_tour.html.erb
@@ -77,9 +77,22 @@
 	</div>
 	<div class="row">
 		<div class="span6 columns">
-			<p>To be completed.</p>
+			<p>You can access the Company Store from the middle of the navigation bar. The Company Stores allows users to spend their hard earned points on anything an employer is willing to list - small gifts, gift cards, perks, etc.</p>
 		</div>
 		<div class="span10 columns">
+			<%= image_tag "/images/tour/company_store_all.PNG", :size=>"600x400", :style => "margin-bottom: 40px;"%>
+		</div>
+	</div>
+	<div class="page-header">
+		<h2>Purchasing Items</h2>
+	</div>
+	<div class="row">
+		<div class="span6 columns">
+			<p>If you have the points available, you can purchase any of the items listed. Just confirm your purchase and the item will be delivered directly to your office in just a few business days.</p>
+		</div>
+		<div class="span10 columns">
+			<%= image_tag "/images/tour/company_store_review.PNG", :size=>"500x300", :style => "margin-bottom: 40px;"%>
+			<%= image_tag "/images/tour/company_store_confirm.PNG", :size=>"500x300"%>
 		</div>
 	</div>
 	<% elsif @page == 4 %>
