--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -16,7 +16,11 @@
 				<% end %>
 				<ul class="nav secondary-nav">
 					<% if signed_in? %>
-					<li><%= link_to "Take the tour", tours_path %></li>
+					<li><% if current_user.company_admin? %>
+						<%= link_to "Take the tour", tours_path %></li>
+						<% else %>
+						<%= link_to "Take the tour", user_tour_tour_path(1) %></li>
+						<% end %>
 					<li><%= link_to "Sign out", signout_path, :method => :delete %></li>
 					<% else %>
 					<li ><%= link_to "Sign in", signin_path %></li>
