--- a/app/views/tours/admin_tour.html.erb
+++ b/app/views/tours/admin_tour.html.erb
@@ -47,7 +47,7 @@
 		</div>
 	</div>
 	<div class="page-header">
-		<h2>Continueing a Path</h2>
+		<h2>Continuing a Path</h2>
 	</div>
 	<div class="row">
 		<div class="span6 columns">
@@ -194,13 +194,31 @@
 			<%= image_tag "/images/tour/company_store_confirm.PNG", :size=>"500x300"%>
 		</div>
 	</div>
+	<div class="page-header">
+		<h2>Adding Items to the Store</h2>
+	</div>
+	<div class="row">
+		<div class="span6 columns">
+			<p>The Company Store is meant to be different for every Moonlite account. You can select what you want in the store and how many points it should cost.</p>
+			<p>When a user purchases an item you added to the store, depending on your account type, we can either handle the purchase order and mail it to your company or route the purchase notification directly to you.</p>
+			<p>To add an item to the store, click the <strong>Add new store item</strong> link at the top.</p>
+			<p>Enter in the required information and click <strong>Save</strong>.</p>
+			<p>You can edit the item at any time by navigating to the item you want to change from the selection screen and clicking <strong>Edit</strong>.</p>
+		</div>
+		<div class="span10 columns">
+			<%= image_tag "/images/tour/company_store_all.PNG", :size=>"500x300", :style => "margin-bottom: 40px;"%>
+			<%= image_tag "/images/tour/company_store_new.PNG", :size=>"500x300"%>
+		</div>
+	</div>
 	<% elsif @page == 6 %>
 	<div class="page-header">
 		<h2>My Company</h2>
 	</div>
 	<div class="row">
 		<div class="span6 columns">
-			<p>To be done.</p>
+			<p>The My Company page allows you to manage your users and account settings.</p>
+			<p>Each user that has accepted your Moonlite account invitation and set up their account will be listed in the <strong>Registered Users</strong> table.
+			<p>Any user that has been sent an invite but not yet set up their account will be listed below <strong>Awaiting reply from</strong>.
 		</div>
 		<div class="span10 columns">
 			<%= image_tag "/images/tour/my_company_all.PNG", :size=>"600x400", :style => "margin-bottom: 40px;"%>
@@ -211,7 +229,9 @@
 	</div>
 	<div class="row">
 		<div class="span6 columns">
-			<p>To be done.</p>
+			<p>To invite new users to your account, click the <strong>Add User button</strong>.</p>
+			<p>Enter in the users email and what account priviledges they should have.</p>
+			<p>As soon as you click <strong>Submit</strong>, an email will be sent to the new user with a secure link to setup their account and get started.</p>
 		</div>
 		<div class="span10 columns">
 			<%= image_tag "/images/tour/my_company_invite.PNG", :size=>"500x300", :style => "margin-bottom: 40px;"%>
@@ -223,7 +243,10 @@
 	</div>
 	<div class="row">
 		<div class="span6 columns">
-			<p>To be done.</p>
+			<p>The Dashboard page allows you to see all the vital information about your Moonlite account at a glance.</p>
+			<p>The <strong>User Statistics</strong> at the top shows information on how active your fellow users are, how active they have been recently and how many points they have accrued.</p>
+			<p>You can find <strong>Path Statistics</strong> for each of the paths your account has created or purchased below the User Statistics.</p>
+			<p>From the Dashboard, you can see basic information on what percentage of your account's users have enrolled in each particular path, how active they have been recently, and the percentage of questions answered right or wrong.</p>
 		</div>
 		<div class="span10 columns">
 			<%= image_tag "/images/tour/dashboard_all.PNG", :size=>"600x400", :style => "margin-bottom: 40px;"%>
@@ -234,7 +257,7 @@
 	</div>
 	<div class="row">
 		<div class="span6 columns">
-			<p>To be done.</p>
+			<p>To view more detailed statistics, click the link in the Path's name. There you can see the most correctly and incorrectly answered questions.</p>
 		</div>
 		<div class="span10 columns">
 			<%= image_tag "/images/tour/dashboard_report.PNG", :size=>"600x400", :style => "margin-bottom: 40px;"%>
@@ -245,10 +268,31 @@
 		<h2>Bon Voyage!</h2>
 	</div>
 	<div class="row">
-		<div class="span6 columns">
-			<p>To be completed.</p>
-		</div>
-		<div class="span10 columns">
+		<style>
+			ol {
+				margin: 20px; 
+			}
+			li {
+				color: #404040;
+				margin-bottom: 20px;
+			}
+		</style>
+		<div class="span12 columns">
+			<p>Now your path begins! A couple recommendations to get you started:</p>
+			<ol>
+				<li>
+					<p>Visit the Path Marketplace to see if there are any Path's that you can use to get your Moonlite account up and running.</p>
+					<%= link_to "Marketplace", marketplace_path, :class => "btn secondary" %>
+				</li>
+				<li>
+					<p>Create a Path of your own.</p>
+					<%= link_to "New Path", new_path_path, :class => "btn secondary" %>
+				</li>
+				<li>
+					<p>Invite other users to your account.</p>
+					<%= link_to "Add Users", new_company_user_path(:company => current_user.company.id,), :class => "btn secondary" %>
+				</li>
+			</ol>
 		</div>
 	</div>
 	<% end %>
