--- a/app/views/tours/choose.html.erb
+++ b/app/views/tours/choose.html.erb
@@ -7,11 +7,11 @@
 		<h3>Which tour would you like to take?</h4>
 		<section style="margin-bottom: 30px;">
 		<h4>Take the administrator tour.<h4>
-		<%= link_to "Start", admin_tour_tour_path(1), :class => "btn primary" %>
+		<%= link_to "Start", admin_tour_tour_path(1), :class => "btn primary", :id => "admin_tour_link" %>
 		</section>
 		<section>
 		<h4>Take the regular user tour.<h4>
-		<%= link_to "Start", user_tour_tour_path(1), :class => "btn primary" %>
+		<%= link_to "Start", user_tour_tour_path(1), :class => "btn primary", :id => "user_tour_link" %>
 		</section>
 	</section>
 </section>
