--- a/app/views/info_resources/info_resource_form.html.erb
+++ b/app/views/info_resources/info_resource_form.html.erb
@@ -2,15 +2,19 @@
 <%= form_for @info_resource do |f| %>
 	<%= render "shared/error_messages", :object => f.object %>
 	<%= f.hidden_field :path_id, :value => @path_id %><br/>
-	<div class="field">
-		<%= f.label :description %><br/>
-		<%= f.text_area :description %>
+	<div class="field clearfix">
+		<%= f.label :description %>
+		<div class="input">
+			<%= f.text_area :description, :class => "xxlarge", :rows => "8" %>
+		</div>
 	</div>
 	<div class="field">
-		<%= f.label :link %><br/>
-		<%= f.text_field :link %>
+		<%= f.label :link %>
+		<div class="input">
+			<%= f.text_field :link, :class => "xlarge" %>
+		</div>
 	</div>
 	<div class="actions">
-		<%= f.submit "Save" %>
+		<%= f.submit "Save", :class => "btn primary" %>
 	</div>
 <% end %>
