Finished sections and redid Factory infrastructure.

--- a/app/views/company_users/new.html.erb
+++ b/app/views/company_users/new.html.erb
@@ -15,7 +15,7 @@
 				<li>
 					<label>
 						<%= f.check_box :is_admin %>
-						<span>User add new users</span>
+						<span>User can add new users</span>
 					</label>
 					<label>
 						<input type="checkbox">
