--- a/app/views/paths/_path.html.erb
+++ b/app/views/paths/_path.html.erb
@@ -2,6 +2,6 @@
 	<td style="vertical-align: middle;"><%= image_tag(path.path_pic, :size=>"70x70", :class=> "thumbnail") %>
 	<td class="path">
 		<h3 class="name"><%= link_to path.name, path %></h3>
-		<p class="description"><%= path.description %></p>
+		<p class="description"><%= truncate(path.description, :length => 255, :ommission => "(continued)") %></p>
 	</td>
 </tr>
