--- a/app/views/sections/section_form.html.erb
+++ b/app/views/sections/section_form.html.erb
@@ -16,5 +16,6 @@
 	</div>
 	<div class="actions">
 		<%= f.submit "Save", :class => "btn primary" %>
+		<%= f.submit "Save and New", :class => "btn secondary" %>
 	</div>
 <% end %>
