--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -1,9 +1,16 @@
 <section class="task">
-	<p><%= @task.points %></p>
-	<p><%= @task.question %></p>
-	<p><%= @task.answer1 %></p>
-	<p><%= @task.answer2 %></p>
-	<p><%= @task.answer3 %></p>
-	<p><%= @task.answer4 %></p>
-	<%= link_to "Edit", edit_task_path(@task)%>
+	<div>
+		<blockquote>
+			<p>
+				<%= @task.question %>
+			</p>
+		</blockquote>
+		<ol>
+			<% if !@task.answer1.blank? %><li><%= @task.answer1 %></li><% end %>
+			<% if !@task.answer2.blank? %><li><%= @task.answer2 %></li><% end %>
+			<% if !@task.answer3.blank? %><li><%= @task.answer3 %></li><% end %>
+			<% if !@task.answer4.blank? %><li><%= @task.answer4 %></li><% end %>
+		</ol>
+		<p style="float: left;">Correct Answer: <%= @task.correct_answer %></p>
+	</div>
 </section>
