--- a/app/views/paths/edit.html.erb
+++ b/app/views/paths/edit.html.erb
@@ -19,12 +19,29 @@
 			<%= f.text_field :image_url, :value => "Link to web hosted picture...", :onclick => "this.value='';" %>
 		</div>
 	</div>
+	<div class="field clearfix">
+		<label>Settings</label>
+		<div class="input">
+			<ul class="inputs-list">
+				<li>
+					<label>
+						<%= f.check_box :is_published, :confirm => "This will publish the path so all users in your account can access it. Are you sure you want to publish this now?" %>
+						<span>Publish this Path to your Moonlite account.</span>
+					</label>
+					<label>
+						<%= f.check_box :is_public, :confirm => "This will publish the path so all users in your account can access it. Are you sure you want to publish this now?" %>
+						<span>Allow users to post this Path to their public profile</span>
+					</label>
+					<label>
+						<%= f.check_box :is_purchaseable, :confirm => "This will publish the Path to the Path Marketplace where any Moonlite account can purchase it. Are you sure you want to publish this to the Marketplace right now?" %>
+						<span>List this Path Marketplace for purchase</span>
+					</label>
+				</li>
+			</ul>
+		</div>
+	</div>
 	<div class="actions">
 		<%= f.submit "Save", :class => "btn primary" %>
-		<%= link_to "Add Section", {:controller => "sections", :action => "new", :path_id => @path }, :class => "btn secondary" %>
-		<%= link_to "Add Question", {:controller => "tasks", :action => "new", :path => @path }, :class => "btn secondary" %>
-		<%= link_to "Upload Questions", {:controller => "paths", :action => "file", :id => @path.id }, :class => "btn secondary"%>
-		<%= link_to "Add Resource", {:controller => "info_resources", :action => "new", :path => @path }, :class => "btn secondary" %>
-		<%= link_to "Add Achievement", {:controller => "achievements", :action => "new", :path_id => @path.id }, :class => "btn secondary" %>
+		<%= link_to "Cancel", @path, :class => "btn secondary" %>
 	</div>
 <% end %>
