--- a/app/views/paths/new.html.erb
+++ b/app/views/paths/new.html.erb
@@ -14,6 +14,7 @@
 		</div>
 	</div>
 	<div class="actions">
-		<%= f.submit "Create", :class => "btn primary" %>
+		<%= f.submit "Save", :class => "btn primary" %>
+		<%= link_to "Cancel", root_path, :class => "btn secondary" %>
 	</div>
 <% end %>
