--- a/app/views/sections/show.html.erb
+++ b/app/views/sections/show.html.erb
@@ -7,6 +7,7 @@
 			<%= link_to "Edit", edit_section_path(@section), :class => "btn secondary" %>
 			<%= link_to "Add Tasks", new_task_path(:section_id => @section.id), :class => "btn secondary" %>
 			<%= link_to "Review Tasks", tasks_path(:section_id => @section.id), :class => "btn secondary" %>
+			<%= link_to "Delete", @section, :method => "delete", :confirm => "Are you sure you want to delete this section?", :title => "Delete section", :class => "btn secondary" %>
 		<% end %>
 	</div>
 </section>
