--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,26 +1,35 @@
-<h1>Sign up</h1>
-<%= form_for(@user) do |f| %>
+<h1>Invite New User</h1>
+<%= form_for @user do |f| %>
 	<%= render "shared/error_messages", :object => f.object %>
-	<%= f.hidden_field :token1, :value => @company_user.token1 %>
-	<div class="field">
-		<%= f.label :name %>
+	<%= f.hidden_field :company_id, {:value => @company.id} %>
+	<div class="field clearfix">
+		<%= f.label :email %>
 		<div class="input">
-			<%= f.text_field :name %>
+			<%= f.text_field :email %>
 		</div>
 	</div>
-	<div class="field">
-		<%= f.label :password %>
+	<div class="field clearfix">
+		<label>Settings</label>
 		<div class="input">
-			<%= f.password_field :password %>
-		</div>
-	</div>
-	<div class="field">
-		<%= f.label :password_confirmation, "Confirm password" %>
-		<div class="input">
-			<%= f.password_field :password_confirmation %>
+			<ul class="inputs-list">
+				<li>
+					<label>
+						<%= f.check_box :company_admin %>
+						<span>User can add new users</span>
+					</label>
+					<label>
+						<input type="checkbox">
+						<span>User can create new Paths</span>
+					</label>
+					<label>
+						<input type="checkbox">
+						<span>User can add items to the Store</span>
+					</label>
+				</li>
+			</ul>
 		</div>
 	</div>
 	<div class="actions">
-		<%= f.submit "Sign up", :class => "btn primary" %>
+		<%= f.submit "Submit", :class => "btn primary" %>
 	</div>
 <% end %>
