--- a/app/views/achievements/new.html.erb
+++ b/app/views/achievements/new.html.erb
@@ -15,12 +15,6 @@
 		</div>
 	</div>
 	<div class="field clearfix">
-		<%= f.label :criteria %>
-		<div class="input">
-			<%= f.text_field :criteria, :maxlength => 255, :size => 75 %>
-		</div>
-	</div>
-	<div class="field clearfix">
 		<%= f.label :points %>
 		<div class="input">
 			<select id="achievement_points" name="achievement[points]">
@@ -31,6 +25,54 @@
 				<option value="25">25</option>
 			</select>
 		</div>
+	</div>
+	<div>
+		<script>
+			$(document).ready(function(){
+				$('.section_check').change(function(){
+					var state = $(this).prop("checked");
+					var this_id = $(this).val();
+					this_id = this_id.replace("section_", "");
+					$(".section_task_"+this_id).each(function(){
+						if(state==true){
+							$(this).find("input").prop("checked", true);
+							$(this).find("input").prop("disabled", true);
+						} else {
+							$(this).find("input").prop("checked", false);
+							$(this).find("input").prop("disabled", false);
+						}
+					});
+				});
+			});
+		</script>
+		<h2>Criteria</h2>
+		<p style="margin: 20px 0px 20px 20px;">Select which tasks, or which sections, must be completed for the user to unlock the achievement.</p>
+		<% if @sections.empty? %>
+			<p style="margin: 30px 0px 200px 0px;">You have not yet created any sections for this Path. You need to create at least one path to create an achievement.</p>
+		<% else %>
+			<table>
+			<% @sections.each do |s| %>
+				<% if !s.tasks.empty? %>
+				<tr><td>	
+					<h3>
+						<input type="checkbox" style="display:inline;" class="section_check" value="section_<%= s.id.to_s %>"/>
+						<%= s.name %>
+					</h3>
+					<ul style="list-style-type: none;">
+					<% s.tasks.each do |t| %>
+						<li class="section_task_<%= s.id.to_s %>">
+							<h4>
+								<input id="achievement[tasks][<%= t.id.to_s %>]" name="achievement[tasks][<%= t.id.to_s %>]" type="checkbox" style="margin-right:10px;"/>
+								<%= t.question %>
+							</h4>
+						</li>
+					<% end %>
+					</ul>
+				<% end %>
+				</tr></td>
+			<% end %>
+			</table>
+		<% end %>
 	</div>
 	<div class="actions">
 		<%= f.submit "Save", :class => "btn primary" %>
