--- a/app/views/paths/edit_sections.html.erb
+++ b/app/views/paths/edit_sections.html.erb
@@ -6,37 +6,57 @@
 	<li><%= link_to "Achievements", edit_path_path(@path.id, :m=>"achievements") %></li>
 </ul>
 <section>
-	<div style="float: right; display:inline;">
-		<%= link_to "New Section", new_section_path(:path_id => @path.id), :class=>"btn primary" %>
-	</div>
-	<h2><%= @path.name %></h2>
-	<% if @sections.empty? %>
-		<p style="margin: 30px 0px 200px 0px;">You have not yet created any sections for this Path.</p>
-	<% else %>
-		<table>
-		<% @sections.each do |s| %>
-			<tr><td>	
-				<h3>
-					<%= s.name %>
-				</h3>
-				<p><%= truncate(strip_tags(s.instructions), :length => 255) %></p>
-				<div style="float:left;display:inline;">
-					<% if s.is_published %>
-					<span class="label"><%= link_to "published", edit_section_path(s, :m => "settings"), :style => "color:white;" %></span>
-					<% else %>
-					<span class="label important"><%= link_to "not published", edit_section_path(s, :m => "settings"), :style => "color:white;" %></span>
-					<% end %>
-					<span class="label"><%= link_to s.tasks.count.to_s + " tasks", edit_section_path(s, :m => "tasks"), :style => "color:white;" %></span>
-				</div>
-				<div style="float:right;display:inline">
-					<%= link_to "Edit", edit_section_path(s), :class => "btn secondary" %>
-					<%= link_to "Delete", s, :method => :delete, :confirm => "Are you sure you want to delete this section? This will delete all the tasks associated with it as well.", :title => "Delete Section", :class => "btn secondary" %>
-				</div>
-			</tr></td>
-		<% end %>
-		</table>
-	<% end %>
-	<div class="actions">
-		<%= link_to "Back to Path", @path, :class => "btn primary" %>
-	</div>
+  <%= form_tag({:controller => :paths, :action => :reorder_sections}, :method => :put) %>
+  <div style="float: right; display:inline;">
+    <% if @reorder %>
+      <%= submit_tag "Save", :class => "btn primary" %>
+      <%= link_to "Cancel", edit_path_path(@path.id, :m => "sections"), :class=> "btn secondary" %>
+    <% else %>
+      <%= link_to "New Section", new_section_path(:path_id => @path.id), :class=>"btn primary" %>
+      <%= link_to "Reorder", edit_path_path(@path.id, :m => "sections", :a => "reorder"), :class=>"btn secondary" %>
+    <% end %>
+  </div>
+  <h2><%= @path.name %></h2>
+  <% if @sections.empty? %>
+    <p style="margin: 30px 0px 200px 0px;">You have not yet created any sections for this Path.</p>
+  <% else %>
+    <table>
+    <% @sections.each do |s| %>
+      <tr><td>	
+        <h3>
+          <%= s.name %>
+        </h3>
+        <p><%= truncate(strip_tags(s.instructions), :length => 255) %></p>
+        <div style="float:left;display:inline;">
+          <% if s.is_published %>
+          <span class="label"><%= link_to "published", edit_section_path(s, :m => "settings"), :style => "color:white;" %></span>
+          <% else %>
+          <span class="label important"><%= link_to "not published", edit_section_path(s, :m => "settings"), :style => "color:white;" %></span>
+          <% end %>
+          <span class="label"><%= link_to s.tasks.count.to_s + " tasks", edit_section_path(s, :m => "tasks"), :style => "color:white;" %></span>
+        </div>
+        <div style="float:right;display:inline">
+          <% if @reorder %>
+            <div class="field clearfix">
+              <%= label_tag :order %>
+              <div class="input">
+                <select id="section_positions_<%= s.id %>" name="sections[positions][<%= s.id %>]" class="small">
+                  <% (1..@sections.size).each do |x| %>
+                    <option value="<%= x %>" <%= "selected='selected'" if s.position == x %>><%= x %></option>
+                  <% end %>
+                </select>
+              </div>
+            </div>
+          <% else %>
+            <%= link_to "Edit", edit_section_path(s), :class => "btn secondary" %>
+            <%= link_to "Delete", s, :method => :delete, :confirm => "Are you sure you want to delete this section? This will delete all the tasks associated with it as well.", :class => "btn secondary" %>
+          <% end %>
+        </div>
+      </tr></td>
+    <% end %>
+    </table>
+  <% end %>
+  <div class="actions">
+    <%= link_to "Back to Path", @path, :class => "btn primary" %>
+  </div>
 </section>
