--- a/app/views/sections/show.html.erb
+++ b/app/views/sections/show.html.erb
@@ -2,7 +2,9 @@
 	<h2><%= @section.name %></h2>
 	<div style="padding: 20px"><%= simple_format(@section.instructions) %></div>
 	<div class="actions">
+    <% if current_user.enrolled?(@section.path) %>
 		<%= link_to "Continue", continue_section_path(@section), :class => "btn primary" %>
+    <% end %>
 		<%= link_to "Back", path_path(@section.path), :class => "btn secondary" %>
 	</div>
 </section>
