--- a/public/stylesheets/core.css
+++ b/public/stylesheets/core.css
@@ -11,16 +11,36 @@
 .task ol {
 	margin: 0px 0px 9px 40px;
 }
-.task .secondary {
-	float: right;
-	margin-left: 6px;
+.task blockquote {
+			margin: 30px 15px 30px 15px;
 }
 .task blockquote p {
 	line-height: 1.3em;
+  font-size: 19px;
 }
 .task .correct {
   color: green; 
   font-weight: bold;
+}
+.task .answer label {
+  font-size: 17px;
+  margin-top: 10px;
+}
+.task-comments {
+    background-color:#f5f5f5;
+    display:block;
+    padding:8.5px;
+    margin:0 0 18px;
+    line-height:18px;
+    font-size:12px;
+    border:1px solid #ccc;
+    border:1px solid rgba(0, 0, 0, 0.15);
+    -webkit-border-radius:3px;
+    -moz-border-radius:3px;
+    border-radius:3px;
+    white-space:pre;
+    white-space:pre-wrap;
+    word-wrap:break-word;
 }
 	
 /* Footer */
