--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -14,6 +14,7 @@
 						<li><%= link_to "My Company", current_user.company %></li>
 						<li><%= link_to "Dashboard", dashboard_path %></li>
 					<% end %>
+          <li><%= link_to "Leaderboard", leaderboards_path %></li>
 				</ul>
 				<% end %>
 				<ul class="nav secondary-nav">
